# stream-notifier-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  stream-notifier-bot.service
.github/workflows/: deploy.yml
locales/: en.yml  ru.yml
src/: main.py
src/config/: settings.py
src/core/: lifecycle.py  logging.py
src/services/: localization.py
src/telegram/: bot.py  keyboards.py  notifier.py
src/twitch/: client.py  models.py
